--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
     "lucide-react": "^0.544.0",
     "next": "^14.2.15",
     "next-sitemap": "^4.2.3",
+    "phaser": "3.90.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11",
-    "zustand": "^5.0.8"
+    "zustand": "5.0.8"
   }
 }
