--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "react-dom": "^18.2.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11",
-    "zustand": "5.0.8"
+    "zustand": "^5.0.8"
   }
 }
