--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "zyberquest",
   "version": "1.0.0",
   "main": "index.js",
+
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -31,10 +32,14 @@
     "next": "^14.2.15",
     "next-sitemap": "^4.2.3",
     "phaser": "3.90.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.11",
     "zustand": "^5.0.8"
   }
+
+
 }
